cluster/prod/apps/filestash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filestash
  namespace: filestash
  labels: { app: filestash }
spec:
  selector: { app: filestash }
  ports:
    - name: http
      port: 8334
      targetPort: http
